--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,7 +2,8 @@
 FROM golang:1.22-alpine AS build
 WORKDIR /src
 COPY go.mod go.sum ./
-RUN go mod download
+RUN go mod download -x
+RUN go mod verify 
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux go build -o /out/api ./main.go
 
